apps/llama-cpp/qwen3-embedding/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen3-embedding
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: qwen3-embedding
    app.kubernetes.io/name: qwen3-embedding
