apps/llama-cpp/qwen3-embedding/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qwen3-embedding
spec:
  ingress: []
  egress: []
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qwen3-embedding
      app.kubernetes.io/name: qwen3-embedding
  policyTypes:
    - Ingress
    - Egress
